--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", poppins;
+  font-family: "Inconsolata", monospace;
   background-color: rgb(3, 3, 54);
   color: aliceblue;
 }
